--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <li class="li-navbar"><a class="a-navbar" href="product.html">Product</a></li>
                     <li class="li-navbar"><a class="a-navbar" href="about.html">About</a></li>
                     <li class="li-navbar"><a class="a-navbar" href="riview.html">Review</a></li>
-                    <li class="li-navbar"><a class="a-navbar" href="suggest.html">Contact</a></li> 
+                    <li class="li-navbar"><a class="a-navbar" href="contact.html">Contact</a></li> 
                 </ul>
             </div>
             <div class="hamburger">
