--- a/product.html
+++ b/product.html
@@ -17,10 +17,10 @@
             <div class="nav-wrapper">
                 <ul>
                     <li class="li-navbar"><a class="a-navbar" href="index.html">Home</a></li>
-                    <li class="li-navbar"><a class="a-navbar" href="portofolio.html">Product</a></li>
-                    <li class="li-navbar"><a class="a-navbar-now" href="product.html">About</a></li>
-                    <li class="li-navbar"><a class="a-navbar" href="about.html">Review</a></li>
-                    <li class="li-navbar"><a class="a-navbar" href="suggest.html">Contact</a></li> 
+                    <li class="li-navbar"><a class="a-navbar-now" href="product.html">Product</a></li>
+                    <li class="li-navbar"><a class="a-navbar" href="about.html">About</a></li>
+                    <li class="li-navbar"><a class="a-navbar" href="riview.html">Review</a></li>
+                    <li class="li-navbar"><a class="a-navbar" href="contact.html">Contact</a></li> 
                 </ul>
             </div>
             <div class="hamburger">
