--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
                     <li class="li-navbar"><a class="a-navbar" href="index.html">Home</a></li>
                     <li class="li-navbar"><a class="a-navbar" href="product.html">Product</a></li>
                     <li class="li-navbar"><a class="a-navbar-now" href="about.html">About</a></li>
-                    <li class="li-navbar"><a class="a-navbar" href="riview.html">Review</a></li>
+                    <li class="li-navbar"><a class="a-navbar" href="review.html">Review</a></li>
                     <li class="li-navbar"><a class="a-navbar" href="contact.html">Contact</a></li> 
                 </ul>
             </div>
