--- a/review.html
+++ b/review.html
@@ -18,7 +18,7 @@
                 <li class="li-navbar"><a class="a-navbar" href="index.html">Home</a></li>
                     <li class="li-navbar"><a class="a-navbar" href="product.html">Product</a></li>
                     <li class="li-navbar"><a class="a-navbar" href="about.html">About</a></li>
-                    <li class="li-navbar"><a class="a-navbar-now" href="review.html">Review</a></li>
+                    <li class="li-navbar"><a class="a-navbar-now" href="riview.html">Review</a></li>
                     <li class="li-navbar"><a class="a-navbar" href="contact.html">Contact</a></li>
             </ul>
         </div>
