--- a/product.html
+++ b/product.html
@@ -32,7 +32,7 @@
     </nav>
     <!--navbarend-->
       <div class="wrapper-product">
-        <h2 class="product-category">Birthday Cakes</h2>
+        <h2 class="product-category">Kids Birthday Cakes</h2>
         <button class="pre-btn"><img src="assets/button.png" alt="Previous"></button>
         <div class="product-container">
           <div class="product-card">
