--- a/product.html
+++ b/product.html
@@ -37,37 +37,37 @@
         <div class="product-container">
           <div class="product-card">
             <div class="product-image">
-              <img src="assets/logo.jpg" alt="">
+              <img src="assets/kidsbc1.jpg" alt="">
               <button class="product-btn">order now</button>
             </div>
           </div>
           <div class="product-card">
             <div class="product-image">
-              <img src="assets/logo.jpg" alt="">
+              <img src="assets/kidsbc2.jpg" alt="">
               <button class="product-btn">order now</button>
             </div>
           </div>
           <div class="product-card">
             <div class="product-image">
-              <img src="assets/logo.jpg" alt="">
+              <img src="assets/kidsbc3.jpg" alt="">
               <button class="product-btn">order now</button>
             </div>
           </div>
           <div class="product-card">
             <div class="product-image">
-              <img src="assets/logo.jpg" alt="">
+              <img src="assets/kidsbc4.jpg" alt="">
               <button class="product-btn">order now</button>
             </div>
           </div>
           <div class="product-card">
             <div class="product-image">
-              <img src="assets/logo.jpg" alt="">
+              <img src="assets/kidsbc5.jpg" alt="">
               <button class="product-btn">order now</button>
             </div>
           </div>
           <div class="product-card">
             <div class="product-image">
-              <img src="assets/logo.jpg" alt="">
+              <img src="assets/kidsbc6.jpg" alt="">
               <button class="product-btn">order now</button>
             </div>
           </div>
@@ -81,37 +81,37 @@
         <div class="product-container1">
           <div class="product-card">
             <div class="product-image">
-              <img src="assets/logo.jpg" alt="">
+              <img src="assets/donat1.jpg" alt="">
               <button class="product-btn">order now</button>
             </div>
           </div>
           <div class="product-card">
             <div class="product-image">
-              <img src="assets/logo.jpg" alt="">
+              <img src="assets/donat2.jpg" alt="">
               <button class="product-btn">order now</button>
             </div>
           </div>
           <div class="product-card">
             <div class="product-image">
-              <img src="assets/logo.jpg" alt="">
+              <img src="assets/donat3.jpg" alt="">
               <button class="product-btn">order now</button>
             </div>
           </div>
           <div class="product-card">
             <div class="product-image">
-              <img src="assets/logo.jpg" alt="">
+              <img src="assets/donat5.jpg" alt="">
               <button class="product-btn">order now</button>
             </div>
           </div>
           <div class="product-card">
             <div class="product-image">
-              <img src="assets/logo.jpg" alt="">
+              <img src="assets/donat4.jpg" alt="">
               <button class="product-btn">order now</button>
             </div>
           </div>
           <div class="product-card">
             <div class="product-image">
-              <img src="assets/logo.jpg" alt="">
+              <img src="assets/donat6.jpg" alt="">
               <button class="product-btn">order now</button>
             </div>
           </div>
