--- a/product.html
+++ b/product.html
@@ -38,37 +38,49 @@
           <div class="product-card">
             <div class="product-image">
               <img src="assets/kidsbc1.jpg" alt="">
+                <a href="https://wa.me/087795390243">
               <button class="product-btn">order now</button>
+                </a>
             </div>
           </div>
           <div class="product-card">
             <div class="product-image">
               <img src="assets/kidsbc2.jpg" alt="">
+                <a href="https://wa.me/087795390243">
               <button class="product-btn">order now</button>
+                </a>
             </div>
           </div>
           <div class="product-card">
             <div class="product-image">
               <img src="assets/kidsbc3.jpg" alt="">
+                <a href="https://wa.me/087795390243">
               <button class="product-btn">order now</button>
+                </a>
             </div>
           </div>
           <div class="product-card">
             <div class="product-image">
               <img src="assets/kidsbc4.jpg" alt="">
+                <a href="https://wa.me/087795390243">
               <button class="product-btn">order now</button>
+                </a>
             </div>
           </div>
           <div class="product-card">
             <div class="product-image">
               <img src="assets/kidsbc5.jpg" alt="">
+                <a href="https://wa.me/087795390243">
               <button class="product-btn">order now</button>
+                </a>
             </div>
           </div>
           <div class="product-card">
             <div class="product-image">
               <img src="assets/kidsbc6.jpg" alt="">
+                <a href="https://wa.me/087795390243">
               <button class="product-btn">order now</button>
+                </a>
             </div>
           </div>
         </div>
@@ -82,37 +94,49 @@
           <div class="product-card">
             <div class="product-image">
               <img src="assets/donat1.jpg" alt="">
+                <a href="https://wa.me/087795390243">
               <button class="product-btn">order now</button>
+                </a>
             </div>
           </div>
           <div class="product-card">
             <div class="product-image">
               <img src="assets/donat2.jpg" alt="">
+                <a href="https://wa.me/087795390243">
               <button class="product-btn">order now</button>
+                </a>
             </div>
           </div>
           <div class="product-card">
             <div class="product-image">
               <img src="assets/donat3.jpg" alt="">
+                <a href="https://wa.me/087795390243">
               <button class="product-btn">order now</button>
+                </a>
             </div>
           </div>
           <div class="product-card">
             <div class="product-image">
               <img src="assets/donat5.jpg" alt="">
+                <a href="https://wa.me/087795390243">
               <button class="product-btn">order now</button>
+                </a>
             </div>
           </div>
           <div class="product-card">
             <div class="product-image">
               <img src="assets/donat4.jpg" alt="">
+                <a href="https://wa.me/087795390243">
               <button class="product-btn">order now</button>
+                </a>
             </div>
           </div>
           <div class="product-card">
             <div class="product-image">
               <img src="assets/donat6.jpg" alt="">
+                <a href="https://wa.me/087795390243">
               <button class="product-btn">order now</button>
+                </a>
             </div>
           </div>
         </div>
