--- a/product.html
+++ b/product.html
@@ -77,7 +77,7 @@
           </div>
           <div class="product-card">
             <div class="product-image">
-              <img src="assets/kidsbc6.jpg" alt="">
+              <img src="assets/kidsbc.jpg" alt="">
                 <a href="https://wa.me/087795390243">
               <button class="product-btn">order now</button>
                 </a>
