--- a/riview.html
+++ b/riview.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>TitraCake</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="riview.css">
 </head>
 <body>
 <!-- Taruh Navbar Sini -->
@@ -15,11 +15,11 @@
         </div>
         <div class="nav-wrapper">
             <ul>
-                <li class="li-navbar"><a class="a-navbar" href="index.html">Home</a></li>
-                    <li class="li-navbar"><a class="a-navbar" href="product.html">Product</a></li>
-                    <li class="li-navbar"><a class="a-navbar" href="about.html">About</a></li>
-                    <li class="li-navbar"><a class="a-navbar-now" href="riview.html">Review</a></li>
-                    <li class="li-navbar"><a class="a-navbar" href="contact.html">Contact</a></li>
+                <li class="li-navbar"><a class="a-navbar-now" href="index.html">Home</a></li>
+                <li class="li-navbar"><a class="a-navbar" href="portofolio.html">Product</a></li>
+                <li class="li-navbar"><a class="a-navbar" href="product.html">About</a></li>
+                <li class="li-navbar"><a class="a-navbar" href="riview.html">Review</a></li>
+                <li class="li-navbar"><a class="a-navbar" href="suggest.html">Contact</a></li> 
             </ul>
         </div>
         <div class="hamburger">
@@ -30,40 +30,38 @@
     </div>
 </nav>
 <!-- Navbar End -->
+<!--Content-->
     <div class="sliders">
         <button class="prev" onclick="changeSlide(-1)"></button>
             <div class="slide-containers">
             <div class="geser">
             <h1>Abi Surya</h1>
-            <img src="./assets/WhatsApp Image 2023-11-05 at 10.13.11.jpeg">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae ratione officiis, ipsum totam, aperiam
-                officia tempora eaque impedit consectetur numquam natus amet inventore quasi maiores sapiente tenetur
-                architecto rem beatae.</p>
+            <img src="assets/user.png">
+            <p>Kue ini sangat enak dan ada berbagai varian rasa.</p>
         </div>
         <div class="geser">
             <h1>Dhita Aprilia</h1>
-            <img src="./assets/WhatsApp Image 2023-11-05 at 10.13.11.jpeg">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae ratione officiis, ipsum totam, aperiam
-                officia tempora eaque impedit consectetur numquam natus amet inventore quasi maiores sapiente tenetur
-                architecto rem beatae.</p>
+            <img src="assets/user.png">
+            <p>saya sangat suka berbelanja di sini karena mendapatkan pelayanan yang baik dan ramah serta rasa kuenya pun enak.</p>
         </div>
         <div class="geser">
             <h1>Bayu Andhika</h1>
-            <img src="./assets/WhatsApp Image 2023-11-05 at 10.13.11.jpeg">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae ratione officiis, ipsum totam, aperiam
-                officia tempora eaque impedit consectetur numquam natus amet inventore quasi maiores sapiente tenetur
-                architecto rem beatae.</p>
+            <img src="assets/user.png">
+            <p>sellernya ramah dan reponsif , cakenya juga enak dan ga terlalu manis sangat rekomen untuk beli disini</p>
         </div>
         <div class="geser">
             <h1>DeTha</h1>
-            <img src="./assets/WhatsApp Image 2023-11-05 at 10.13.11.jpeg">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae ratione officiis, ipsum totam, aperiam
-                officia tempora eaque impedit consectetur numquam natus amet inventore quasi maiores sapiente tenetur
-                architecto rem beatae.</p>
+            <img src="assets/user.png">
+            <p>kuenya sesuai dengan gambar</p>
             </div>
             </div>
             <button class="next" onclick="changeSlide(1)"></button>
         </div>
+<!--End Content-->
+<!--Footer-->
+    <div class="footer">
+        Copyright By Artha Wiguna
+    </div>
         <script src="script.js"></script>
 </body>
 </html>
