--- a/riview.html
+++ b/riview.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>TitraCake</title>
-    <link rel="stylesheet" href="riview.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <!-- Taruh Navbar Sini -->
