--- a/riview.html
+++ b/riview.html
@@ -15,10 +15,10 @@
         </div>
         <div class="nav-wrapper">
             <ul>
-                <li class="li-navbar"><a class="a-navbar-now" href="index.html">Home</a></li>
+                <li class="li-navbar"><a class="a-navbar" href="index.html">Home</a></li>
                 <li class="li-navbar"><a class="a-navbar" href="portofolio.html">Product</a></li>
                 <li class="li-navbar"><a class="a-navbar" href="product.html">About</a></li>
-                <li class="li-navbar"><a class="a-navbar" href="riview.html">Review</a></li>
+                <li class="li-navbar"><a class="a-navbar-now" href="riview.html">Review</a></li>
                 <li class="li-navbar"><a class="a-navbar" href="suggest.html">Contact</a></li> 
             </ul>
         </div>
