--- a/product.html
+++ b/product.html
@@ -142,6 +142,22 @@
         </div>
         <button class="nxt-btn1"><img src="assets/buttonright.png" alt="Next"></button>
     </div>
+
+    <div class="footer">
+            <div>
+                <h3>About Us</h3>
+                <p>Tirta Cake berawal dari 6 April 2019, dimana saya Septya masih bekerja pada salah satu coffee shop. Kebetulan owner shop itu jual cake homemade, dari sana lah saya mulai bantu bantu bos saya, dan saya jadi tau bagaimana, apa saja bahan bahan dan alatnya. Akhirnya saya mencoba membuka usaha cake rumahan dengan bahan yang mirip. Dengan jangkauan pemasaran yang masih dari mulut ke mulut, dari saudara ke teman, dan akhirnya sampai sekarang.</p>
+            </div>
+            <div>
+                <h3>Credits</h3>
+                <p>1. I Made Artha Arimbawa (Home)</p>
+                <p>2. Putu Abi Surya Pratama (Product)</p>
+                <p>3. I Made Cahya Utama Yuana (About)</p>
+                <p>4. Putu Artha Wiguna (Review)</p>
+                <p>5. I Gusti Agung Panji Kusuma Wardana (Contact)</p>
+            </div>
+            </div>
+    
       <script src="script.js"></script>
 </body>
 </html>
