--- a/index.html
+++ b/index.html
@@ -63,6 +63,6 @@
             </div>
             </div>
             
-    <script src="script.js"></script>
+    <script src="slide1.js"></script>
 </body>
 </html>
