--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact us</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        .footer {
+            margin-top: 100px;
+        }
+    </style>
 </head>
 <body>
     <nav>
