--- a/about.html
+++ b/about.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        .footer {
+            margin-top: 400px;
+        }
+    </style>
 </head>
 <body>
-    <nav>
-        <div class="container">
-            <!-- Taruh Navbar Sini -->
     <nav>
         <div class="nav-box">
             <div class="logo-cont">
@@ -32,6 +34,7 @@
         </div>
     </nav>
     <!-- Content -->
+    <div class="container">
             <div>
                 <img class="ftkue" src="./assets/kue.jpeg">
             </div>
@@ -54,6 +57,5 @@
                 <p>5. I Gusti Agung Panji Kusuma Wardana (Contact)</p>
             </div>
             </div>
-    </nav>
 </body>
 </html>
