--- a/product.html
+++ b/product.html
@@ -6,6 +6,11 @@
     <title>Product | Tirta Cake</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <style>
+      .footer {
+        margin-top: 300px;
+      }
+    </style>
 </head>
 <body>
     <!--navbar-->
