--- a/riview.html
+++ b/riview.html
@@ -5,7 +5,13 @@
     <meta charset="UTF-8">
     <title>TitraCake</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        .footer {
+            margin-top: 200px;
+        }
+    </style>
 </head>
+
 <body>
 <!-- Taruh Navbar Sini -->
 <nav>
@@ -16,10 +22,10 @@
         <div class="nav-wrapper">
             <ul>
                 <li class="li-navbar"><a class="a-navbar" href="index.html">Home</a></li>
-                <li class="li-navbar"><a class="a-navbar" href="portofolio.html">Product</a></li>
-                <li class="li-navbar"><a class="a-navbar" href="product.html">About</a></li>
+                <li class="li-navbar"><a class="a-navbar" href="product.html">Product</a></li>
+                <li class="li-navbar"><a class="a-navbar" href="about.html">About</a></li>
                 <li class="li-navbar"><a class="a-navbar-now" href="riview.html">Review</a></li>
-                <li class="li-navbar"><a class="a-navbar" href="suggest.html">Contact</a></li> 
+                <li class="li-navbar"><a class="a-navbar" href="contact.html">Contact</a></li> 
             </ul>
         </div>
         <div class="hamburger">
@@ -72,6 +78,6 @@
                 <p>5. I Gusti Agung Panji Kusuma Wardana (Contact)</p>
             </div>
             </div>
-        <script src="script.js"></script>
+        <script src="slide2.js"></script>
 </body>
 </html>
